# Masterthesis

./: .gitignore  README.md
code/: clean-script.sh  client_test_suite.py  config-script.sh  local.conf  result.py  server_test_suite.py  setup_qos.sh  test_configurations.save
code/client/: Cargo.toml
code/client/src/: main.rs
code/client/src/bpf/: monitore.bpf.c
code/hostapd/: wifi4_20  wifi4_40  wifi6_5_80  wifi6_6_160  wifi6_6_20  wifi6_6_80
code/meta-masterthesis/conf/: layer.conf
code/meta-masterthesis/recipes-bsp/overlays/: pcie-overlays.bb
code/meta-masterthesis/recipes-connectivity/hostapd/: hostapd_%.bbappend
code/meta-masterthesis/recipes-connectivity/hostapd/files/: wifi4  wifi4_20  wifi4_40  wifi5_20  wifi5_40  wifi6  (+8 more)
code/meta-masterthesis/recipes-connectivity/network/: dnsmasq_%.bbappend
code/meta-masterthesis/recipes-connectivity/rust/: rust-server.bb  test.bb
code/meta-masterthesis/recipes-connectivity/rust-client/: rust-client.bb
code/meta-masterthesis/recipes-connectivity/setup/: setup.bb
code/meta-masterthesis/recipes-core/images/: rt-image.bb  rt-image.bbappend
code/meta-masterthesis/recipes-kernel/linux/: linux-raspberrypi_%.bbappend
code/server/: Cargo.toml  build.rs  server_0.1.0.bb
code/server/src/: main.rs
code/server/src/bpf/: monitore.bpf.c
thesis/: abstract.tex  chapter_basics.tex  chapter_evaluation.tex  chapter_introduction.tex  chapter_related_work.tex  chapter_test_environment.tex  chapter_wifi_modifications.tex  chapters.tex  thesis.bib  thesis.tex  title.tex  toc.tex
thesis/tables/: CodebookOverview.tex
(+8 files in other folders)
