[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libbpf-rs = "0.22"
anyhow = "1.0"
bytemuck= { version = "1.14", features = ["derive"]}
once_cell = "1.19.0"
[build-dependencies]
libbpf-cargo = "0.22"

